# FakeEssential

./: .gitattributes  CMakeLists.txt  README.md  argparse.cpp  argparse.h  main.cpp  utils.cpp  utils.h
.github/workflows/: cmake.yml
discord/: lobby_manager.h  overlay_manager.cpp  overlay_manager.h  storage_manager.cpp  storage_manager.h  types.cpp
json/: json.hpp
